deploy: 02302327ab2284686d81dfbe6f4b0af08724cac8

--- a/ar/industry-guidance/index.html
+++ b/ar/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>التوجيهات الخاصة بمجال الصناعة لتقليل خطر الإصابة</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;9:24 ص الساعة 1 ديسمبر 2020</p>
+            <p class="small-text">آخر التحديثات&nbsp;4:43 م الساعة 1 ديسمبر 2020</p>
           
         </div>
       </div>
@@ -1345,7 +1345,7 @@
 <p>اتبع هذه <a href="https://files.covid19.ca.gov/pdf/guidance-office-workspaces--ar.pdf">التوجيهات الخاصة بأماكن العمل المكتبية</a> لتوفير بيئة أكثر أمانًا للموظفين.</p>
 <p>استعرض التوجيه، وقم بإعداد خطة، وانشر <a href="https://files.covid19.ca.gov/pdf/checklist-office-workspaces--ar.pdf">قائمة مراجعة لمكان العمل في أماكن العمل المكتبية</a> لكي تبين للعملاء والموظفين أنك قد قللت المخاطر وأنك جاهز لاستئناف العمل.</p>
 <p>يمكن إعادة فتح مكاتب الخدمات الدينية ضمن إطار المعايير التالية:</p>
-<ol><li>إن المرافق الدينية تعتبر "مكاتب" فقط للعاملين بالمنظمة وحيث يكون المرفق هو مكان عملهم المعتاد.</li><li>ينبغي لصاحب العمل تنفيذ توجيهات الولاية المتعلقة بالمكاتب قبل إعادة فتح المنشأة للموظفين.</li><li>لا يسمح هذا التخصيص بالتجمعات لغير الموظفين، مثل جماعة المصلين ورعايا هذا التجمع الديني.</li></ol>
+<ol><li>إن المرافق الدينية تعتبر "مكاتب" فقط للعاملين بالمنظمة وحيث يكون المرفق هو مكان عملهم المعتاد.</li><li>ينبغي لصاحب العمل تنفيذ توجيهات الولاية المتعلقة بالمكاتب قبل إعادة فتح المنشأة للموظفين.</li><li>لا يسمح هذا التصنيف بتجمعات غير الموظفين، مثل اجتماعات المؤسسات.</li></ol>
 
       </div>
     </div>
@@ -1395,13 +1395,13 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="campgrounds-outdoor-recreation"><span class="ca-gov-icon-tent"></span> الاستجمام في الهواء الطلق كالمخيمات والملاعب - تم التحديث في 14 أكتوبر</h4>
+<h4 id="campgrounds-outdoor-recreation"><span class="ca-gov-icon-tent"></span> الاستجمام في الأماكن المفتوحة، ويشمل ذلك المخيمات والملاعب ومنتجعات التزلج - تم التحديث في 1 ديسمبر</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>اتبع هذه <a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--ar.pdf">التوجيهات الخاصة بأراضي التخييم</a> وحدائق المقطورات والأنشطة الترفيهية في الهواء الطلق لتوفير بيئة أكثر أمانًا للموظفين والزبائن. </p>
-<p>استعرض التوجيهات، وقم بإعداد خطة لمكان عملك لكي تبين للعملاء والموظفين أنك قد قللت من المخاطر وأنك جاهز لاستئناف العمل.</p>
+<p>اتبع هذا <a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--ar.pdf">التوجيه الخاص بالمخيمات،</a> وباحات السيارات الترفيهية، وعمليات التزلج، وغيرها من الأنشطة الترفيهية في الأماكن المفتوحة لتوفير بيئة أكثر أمانًا للموظفين والعمال. </p>
+<p>اطلع على التوجيهات، وقم بإعداد خطة لمكان عملك لكي تبين للعملاء والموظفين أنك قد قللت من المخاطر وجاهز لاستئناف العمل.</p>
 <p>يمكن افتتاح الملاعب الخارجية فقط بإجراء بعض التعديلات في جميع الفئات. انظر <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Outdoor%20Playgrounds%20and%20other%20Outdoor%20Recreational%20Facilities.aspx">شروط ومتطلبات الملاعب الخارجية</a> للحفاظ عليها آمنة وممتعة للجميع.</p>
 <p>يمكن افتتاح حدائق التزلج الخارجية فقط بإجراء بعض التعديلات في جميع الفئات. يجب على الحضور الالتزام بمتطلبات التباعد الجسدي وارتداء الأقنعة على النحو الموضح في <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Outdoor%20Playgrounds%20and%20other%20Outdoor%20Recreational%20Facilities.aspx">إرشادات الملاعب الخارجية</a>.</p>
 
@@ -1721,7 +1721,7 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>اتبع هذا <a href="https://files.covid19.ca.gov/pdf/guidance-real-estate--ar.pdf">التوجيه الخاص بالأعمال التجارية العاملة في قطاع المعاملات العقارية</a> لإيجاد بيئة أكثر سلامة للعاملين.</p>
-<p>راجع التوجيهات، وضع خطة، وانشر <a href="https://files.covid19.ca.gov/pdf/checklist-real-estate--ar.pdf">قائمة مراجعة للقطاع العقاري</a> في مكان عملك كي تبين للزبائن والموظفين أنك قد قللت من المخاطر، وأنك قد فتحت نشاطك التجاري.</p>
+<p>راجع التوجيهات، وقم بإعداد خطة، وانشر <a href="https://files.covid19.ca.gov/pdf/checklist-real-estate--ar.pdf">قائمة مراجعة للقطاع العقاري</a> في مكان العمل لكي تبين للعملاء والموظفين أنك قد قللت المخاطر وجاهز لاستئناف العمل.</p>
 
       </div>
     </div>
@@ -1743,7 +1743,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> المطاعم والخمارات والحانات - تم التحديث في 1 ديسمبر</h4>
+<h4 id="restaurants"><span class="ca-gov-icon-restaurant"></span> المطاعم ومصانع الخمور والحانات - تم التحديث في 1 ديسمبر</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -1758,11 +1758,11 @@
 <p>الفئة الأدنى (أصفر)</p>
 <ul><li>المطاعم: <ul><li>الأماكن الداخلية مع إجراء تعديلات</li><li>يجب أن تقتصر الطاقة الاسيتعابية على 50٪</li></ul></li><li>مصانع الخمور  وقاعات التذوق:<ul><li>الأماكن المغلقة مع إجراء تعديلات</li><li>يجب أن تقتصر السعة على 50٪ أو 200 شخص، أيهما أقل</li></ul></li><li>الحانات ومصانع الجعة ومصانع التقطير: <ul><li>الأماكن الداخلية مع إجراء تعديلات</li><li>يجب أن تقتصر الطاقة الاستيعابية على 50٪</li></ul></li></ul>
 <p><strong>المطاعم</strong></p>
-<p>اتبع هذه <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--ar.pdf">التوجيهات الخاصة بالمطاعم</a> لتوفير بيئة أكثر نظافة وأمانًا للموظفين والزبائن. راجع التوجيهات، وضع خطة، وانشر <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--ar.pdf">قائمة مراجعة بالمطاعم التي بها صالات لتناول الطعام</a> في مكان عملك كي تبين للزبائن والموظفين أنك قد قللت من المخاطر، وأنك قد فتحت نشاطك التجاري.</p>
+<p>اتبع هذا <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--ar.pdf">التوجيه الخاص بالمطاعم</a> لتوفير بيئة آمنة ونظيفة للموظفين والعملاء. راجع التوجيهات، وقم بإعداد خطة، وانشر <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--ar.pdf">قائمة المراجعة الخاصة بالمطاعم</a> في مكان عملك لكي تبين للزبائن والموظفين أنك قد قللت من المخاطر وجاهز لاستئناف العمل.</p>
 <p><strong>مصانع الخمور وقاعات التذوق</strong></p>
-<p>اتبع هذه <a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">التوجيهات الخاصة بمصانع الخمور وقاعات التذوق</a> <strong> التي لا تقدم وجبات</strong> لتوفير بيئة أكثر نظافة وأمانًا للموظفين والزبائن. راجع التوجيهات، وقم بإعداد خطة، وانشر <a href="https://files.covid19.ca.gov/pdf/checklist-wineries--en.pdf">قائمة مراجعة لأندية القمار</a> في مكان عملك لكي تبين للعملاء والموظفين أنك قد قللت من الخطر وأنك جاهز لاستئناف العمل. يجب على المنشآت التي تقدم وجبات اتباع التوجيهات وقائمة المراجعة الخاصة بالمطاعم.</p>
+<p>اتبع هذا <a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">التوجيه الخاص بمصانع الخمور وقاعات التذوق</a> <strong> التي لا تقدم وجبات</strong> لتوفير بيئة آمنة ونظيفة للموظفين والعملاء. راجع التوجيهات، وقم بإعداد خطة، وانشر <a href="https://files.covid19.ca.gov/pdf/checklist-wineries--en.pdf">قائمة مراجعة لأندية القمار</a> في مكان عملك لكي تبين للعملاء والموظفين أنك قد قللت من الخطر وأنك جاهز لاستئناف العمل. يجب على المنشآت التي تقدم وجبات اتباع التوجيهات وقائمة المراجعة الخاصة بالمطاعم.</p>
 <p><strong>الحانات ومصانع الجعة ومصانع التقطير</strong></p>
-<p>اتبع هذه <a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">التوجيهات الخاصة بالحانات ومصانع الجعة ومصانع التقطير</a> <strong> التي لا تقدم وجبات</strong> لتوفير بيئة أكثر نظافة وأمانًا للموظفين والزبائن. راجع التوجيهات، وضع خطة، وانشر <a href="https://files.covid19.ca.gov/pdf/checklist-bars--en.pdf">قائمة مراجعة للحانات</a> في مكان عملك كي تبين للعملاء والموظفين أنك قد قللت من الخطر، وأنك جاهز لاستئناف العمل. يجب على المنشآت التي تقدم وجبات اتباع التوجيهات وقائمة المراجعة الخاصة بالمطاعم. </p>
+<p>اتبع هذا <a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">التوجيه الخاص بالحانات ومصانع الجعة ومصانع التقطير </a> <strong>التي لا تقدم وجبات</strong> لتوفير بيئة آمنة ونظيفة للموظفين والعملاء. راجع التوجيهات، وضع خطة، وانشر <a href="https://files.covid19.ca.gov/pdf/checklist-bars--en.pdf">قائمة مراجعة للحانات</a> في مكان عملك كي تبين للعملاء والموظفين أنك قد قللت من الخطر، وأنك جاهز لاستئناف العمل. يجب على المنشآت التي تقدم وجبات اتباع التوجيهات وقائمة المراجعة الخاصة بالمطاعم.</p>
 
       </div>
     </div>
