--- a/es/industry-guidance/index.html
+++ b/es/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Guía para las industrias para reducir el riesgo</h1>
           
-            <p class="small-text">Última actualización&nbsp;1 de diciembre de 2020 a las 9:24 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;1 de diciembre de 2020 a las 4:43 p. m.</p>
           
         </div>
       </div>
@@ -1395,12 +1395,12 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="campgrounds-outdoor-recreation"><span class="ca-gov-icon-tent"></span> Recreación al aire libre, incluidos campamentos y áreas de juegos: actualizado el 14 de octubre</h4>
+<h4 id="campgrounds-outdoor-recreation"><span class="ca-gov-icon-tent"></span> Recreación al aire libre, incluidos campamentos, áreas de juegos y centros de esquí: actualizado el 1.º de diciembre</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--es.pdf">guía para campamentos</a>, parques de casas rodantes y recreación al aire libre para crear un entorno más seguro para los trabajadores y los clientes. </p>
+<p>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--es.pdf">guía para campamentos</a>, parques de casas rodantes, operaciones de esquí y otros lugares de recreación al aire libre para crear un entorno más seguro para los trabajadores y los clientes. </p>
 <p>Revise la guía y prepare un plan para su lugar de trabajo para mostrar a sus clientes y empleados que ha reducido el riesgo y que está abierto para trabajar.</p>
 <p>Los parques infantiles en exteriores pueden abrir con modificaciones en todos los niveles. Consulte <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Outdoor%20Playgrounds%20and%20other%20Outdoor%20Recreational%20Facilities.aspx">los requisitos para los parques infantiles al aire libre</a> para mantenerlos seguros y divertidos para todos.</p>
 <p>Los parques de patinaje al aire libre pueden abrir con modificaciones en todos los niveles. Los asistentes deben cumplir los requisitos de distanciamiento físico y el uso de mascarillas como se describe en la <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Outdoor%20Playgrounds%20and%20other%20Outdoor%20Recreational%20Facilities.aspx">guía para parques infantiles al aire libre</a>.</p>
@@ -1721,7 +1721,7 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-real-estate--es.pdf">guía para los negocios que operan en la industria inmobiliaria</a> para crear un entorno más seguro para los trabajadores.</p>
-<p>Revise la guía, prepare un plan y publique la <a href="https://files.covid19.ca.gov/pdf/checklist-real-estate--es.pdf">lista de verificación para la industria de transacciones inmobiliarias</a> en su lugar de trabajo para mostrar a sus clientes y empleados que ha reducido el riesgo y que está abierto para trabajar.</p>
+<p>Revise la guía, prepare un plan y publique la <a href="https://files.covid19.ca.gov/pdf/checklist-real-estate--es.pdf">lista de verificación para la industria inmobiliaria</a> en su lugar de trabajo para mostrar a sus clientes y empleados que ha reducido el riesgo y que está abierto para trabajar.</p>
 
       </div>
     </div>
@@ -1758,9 +1758,9 @@
 <p>Mínimo (amarillo)</p>
 <ul><li>Restaurantes: <ul><li>En interiores con modificaciones.</li><li>La capacidad debe limitarse al 50 %.</li></ul></li><li>Bodegas de vino y salas de degustación:<ul><li>En interiores con modificaciones.</li><li>Se debe limitar al 50 % de la capacidad o a 200 personas, lo que sea menor.</li></ul></li><li>Bares, cervecerías y destilerías: <ul><li>En interiores con modificaciones.</li><li>La capacidad debe limitarse al 50 %.</li></ul></li></ul>
 <p><strong>Restaurantes</strong></p>
-<p>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--es.pdf">guía para restaurantes</a> para apoyar un entorno seguro y limpio para los trabajadores y clientes. Revise la guía, prepare un plan y publique la <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--es.pdf">lista de verificación para restaurantes</a> en su lugar de trabajo para mostrar a sus clientes y empleados que ha reducido el riesgo y que está abierto para trabajar.</p>
+<p>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-restaurants-bars-wineries--es.pdf">guía para restaurantes</a> para apoyar un entorno seguro y limpio para los trabajadores y los clientes. Revise la guía, prepare un plan y publique la <a href="https://files.covid19.ca.gov/pdf/checklist-restaurants-bars--es.pdf">lista de verificación para restaurantes</a> en su lugar de trabajo para mostrar a sus clientes y empleados que ha reducido el riesgo y que está abierto para trabajar.</p>
 <p><strong>Bodegas de vino y salas de degustación</strong></p>
-<p>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">guía para bodegas de vino y salas de degustación</a> <strong> que no sirvan comidas</strong> para apoyar un entorno seguro y limpio para los trabajadores y clientes. Revise la guía, prepare un plan y publique la <a href="https://files.covid19.ca.gov/pdf/checklist-wineries--en.pdf">lista de verificación para bodegas de vino</a> en su lugar de trabajo para mostrar a sus clientes y empleados que ha reducido el riesgo y que está abierto para trabajar. Los establecimientos que sirven comidas deben seguir la guía y la lista de verificación para restaurantes.</p>
+<p>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-wineries--en.pdf">guía para bodegas de vino y salas de degustación</a> <strong> que no sirvan comidas</strong> para apoyar un entorno seguro y limpio para los trabajadores y los clientes. Revise la guía, prepare un plan y publique la <a href="https://files.covid19.ca.gov/pdf/checklist-wineries--en.pdf">lista de verificación para bodegas de vino</a> en su lugar de trabajo para mostrar a sus clientes y empleados que ha reducido el riesgo y que está abierto para trabajar. Los establecimientos que sirven comidas deben seguir la guía y la lista de verificación para restaurantes.</p>
 <p><strong>Bares, cervecerías y destilerías</strong></p>
 <p>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-bars--en.pdf">guía para bares, cervecerías y destilerías</a> <strong> que no sirvan comidas</strong> para apoyar un entorno seguro y limpio para los trabajadores y los clientes. Revise la guía, prepare un plan y publique la <a href="https://files.covid19.ca.gov/pdf/checklist-bars--en.pdf">lista de verificación para bares</a> en su lugar de trabajo para mostrar a sus clientes y empleados que ha reducido el riesgo y que está abierto para trabajar. Los establecimientos que sirven comidas deben seguir la guía y la lista de verificación para restaurantes.</p>
 
