--- a/ko/industry-guidance/index.html
+++ b/ko/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>위험을 줄이기 위한 업계 지침</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2020년 12월 1일 오전 9:24</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2020년 12월 1일 오후 4:43</p>
           
         </div>
       </div>
@@ -1345,7 +1345,7 @@
 <p>본 <a href="https://files.covid19.ca.gov/pdf/guidance-office-workspaces--ko.pdf">사무실 작업장을 위한 지침</a>을 준수하여 근로자에게 더 안전한 환경을 조성하십시오.</p>
 <p>지침을 검토하여 계획을 마련하고 <a href="https://files.covid19.ca.gov/pdf/checklist-office-workspaces--ko.pdf">사무실 작업장 체크리스트</a>를 작업장에 게시하여 고객 및 직원들에게 귀하의 작업장이 감염 위험을 줄이는 작업을 완료했으며 사업을 재개했음을 알리십시오.</p>
 <p>신뢰 기반의 사무실 사업장은 다음과 같은 한도 내에서 재개할 수 있습니다:</p>
-<ol><li>신뢰 기반 시설은 조직이 채용한 직원 및 해당 시설이 정상적인 근무 장소인 경우에 한해 "사무실"로 간주됩니다.</li><li>고용주는 직원용 시설을 재개장하기 전에 사무실 관련 주정부 지침을 시행해야 합니다;</li><li>본 해당 내용은 조직의 신도 모임과 같은 직원 이외의 모임을 허용하는 것이 아닙니다.</li></ol>
+<ol><li>신뢰 기반 시설은 조직이 채용한 직원 및 해당 시설이 정상적인 근무 장소인 경우에 한해 "사무실"로 간주됩니다.</li><li>고용주는 직원용 시설을 재개장하기 전에 사무실 관련 주정부 지침을 시행해야 합니다;</li><li>해당 내용은 조직의 신도 모임과 같은 직원 이외의 모임을 허용하는 것이 아닙니다.</li></ol>
 
       </div>
     </div>
@@ -1395,12 +1395,12 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="campgrounds-outdoor-recreation"><span class="ca-gov-icon-tent"></span> 캠핑장과 놀이터 등을 포함하는 실외 레크리에이션 – 10월 14일 업데이트</h4>
+<h4 id="campgrounds-outdoor-recreation"><span class="ca-gov-icon-tent"></span> 캠핑장과 놀이터, 스키 리조트 등을 포함하는 실외 리크리에이션 – 갱신일자 12월 1일</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>본 <a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--ko.pdf">캠핌장</a>, 레제용 차량 공원 및 야외 레크리에이션에 관한 지침을 준수하여 근로자와 고객에게 더 안전한 환경을 조성하십시오. </p>
+<p><a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--ko.pdf">캠핑장</a>, 레져용 차량 공원, 스키 시설 및 기타 야외 레크리에이션에 관한 본 지침을 준수하여 근로자와 고객에게 더 안전한 환경을 조성하십시오. </p>
 <p>지침을 검토하여 고객과 직원들에게 귀하의 사업장이 감염 위험을 줄이는 작업을 완료했으며 사업을 재개했음을 알릴 수 있는 작업장 계획을 준비하십시오.</p>
 <p>실외 놀이터는 모든 단계에서 변경 조치 이행 후 운영을 개시할 수 있습니다. 놀이터가 안전하고 모든 사람들에게 즐거움을 줄 수 있도록 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Outdoor%20Playgrounds%20and%20other%20Outdoor%20Recreational%20Facilities.aspx">실외 놀이터에 대한 요건</a>을 참조하십시오.</p>
 <p>실외 주립공원은 모든 단계에서 변경 조치 이행 후 운영을 개시할 수 있습니다. 참석자는 반드시 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Outdoor%20Playgrounds%20and%20other%20Outdoor%20Recreational%20Facilities.aspx">실외 놀이터 지침</a>에서 요약한 바와 같이 물리적 거리 요건과 마스크 착용을 준수해야 합니다.</p>
