--- a/tl/industry-guidance/index.html
+++ b/tl/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Gabay sa industriya para mabawasan ang panganib</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Disyembre 1, 2020 sa 9:24 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Disyembre 1, 2020 sa 4:43 PM</p>
           
         </div>
       </div>
@@ -1395,12 +1395,12 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="campgrounds-outdoor-recreation"><span class="ca-gov-icon-tent"></span> Outdoor na libangan, kasama ang mga campground at palaruan – na-update noong Oktubre 14</h4>
+<h4 id="campgrounds-outdoor-recreation"><span class="ca-gov-icon-tent"></span> Outdoor na libangan, kasama ang mga campground, palaruan, at ski resort – na-update noong Disyembre 1</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Sundin ang <a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--tl.pdf">gabay na ito para sa mga campground</a>, RV park, at outdoor na libangan para makagawa ng ligtas na lugar para sa mga manggagawa at tagatangkilik. </p>
+<p>Sundin ang <a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--tl.pdf">gabay na ito para sa mga campground</a>, RV park, operasyon sa ski resort, at iba pang outdoor na libangan para makagawa ng ligtas na lugar para sa mga manggagawa at tagatangkilik. </p>
 <p>Suriin ang gabay at maghanda ng plano sa iyong lugar ng trabaho para maipakita sa mga customer at empleyado na binawasan mo ang panganib at bukas ka na para magnegosyo.</p>
 <p>Puwedeng magbukas ang mga outdoor na palaruan nang may mga modipikasyon sa lahat ng tier. Tingnan ang <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Outdoor%20Playgrounds%20and%20other%20Outdoor%20Recreational%20Facilities.aspx">mga ipinag-aatas para sa mga outdoor na palaruan</a> para mapanatiling ligtas at nakakalibang para sa lahat.</p>
 <p>Puwedeng magbukas ang mga outdoor na stakepark nang may mga modipikasyon sa lahat ng tier. Dapat sumunod ang mga pupunta sa mga ipinag-aatas sa physical distancing at pagsusuot ng mask ayon sa nakabalangkas sa <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Outdoor%20Playgrounds%20and%20other%20Outdoor%20Recreational%20Facilities.aspx">gabay sa outdoor na palaruan</a>.</p>
