--- a/vi/industry-guidance/index.html
+++ b/vi/industry-guidance/index.html
@@ -164,7 +164,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Hướng dẫn dành cho từng ngành nghề để giảm nhẹ rủi ro</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;1 tháng 12, 2020 lúc 9:24</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;1 tháng 12, 2020 lúc 16:43</p>
           
         </div>
       </div>
@@ -1397,13 +1397,13 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="campgrounds-outdoor-recreation"><span class="ca-gov-icon-tent"></span> Khu vui chơi giải trí ngoài trời, bao gồm khu cắm trại và sân chơi – cập nhật ngày 14 tháng 10</h4>
+<h4 id="campgrounds-outdoor-recreation"><span class="ca-gov-icon-tent"></span> Khu vui chơi giải trí ngoài trời, bao gồm khu cắm trại, sân chơi và khu nghỉ dưỡng trượt tuyết – cập nhật ngày 1 tháng 12</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--vi.pdf">hướng dẫn dành cho các khu cắm trại</a>, công viên xe giải trí (Recreational Vehicle, RV) và khu vui chơi giải trí ngoài trời này để tạo ra môi trường an toàn hơn cho người lao động và khách hàng. </p>
-<p>Xem xét hướng dẫn và lập kế hoạch cho cơ sở làm việc của quý vị để khách hàng và nhân viên thấy quý vị đã giảm thiểu được nguy cơ và sẵn sàng mở cửa kinh doanh trở lại.</p>
+<p>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--vi.pdf">hướng dẫn dành cho các khu cắm trại</a>, công viên xe giải trí (Recreational Vehicle, RV), hoạt động trượt tuyết và khu vui chơi giải trí ngoài trời này để tạo ra môi trường an toàn hơn cho người lao động và khách hàng. </p>
+<p>Xem xét hướng dẫn và lập kế hoạch cho cơ sở làm việc của quý vị để khách hàng và nhân viên thấy quý vị đã giảm thiểu được nguy cơ và sẽ mở cửa kinh doanh trở lại.</p>
 <p>Sân chơi ngoài trời có thể mở cửa với điều chỉnh sửa đổi ở tất cả các cấp. Xem <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Outdoor%20Playgrounds%20and%20other%20Outdoor%20Recreational%20Facilities.aspx">các yêu cầu đối với sân chơi ngoài trời</a> để giữ sân chơi an toàn và vui thú cho mọi người.</p>
 <p>Sân trượt ván ngoài trời có thể mở cửa với điều chỉnh sửa đổi ở tất cả các cấp. Người tham gia phải tuân thủ các yêu cầu về giãn cách xã hội và đeo khẩu trang theo quy định trong <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Outdoor%20Playgrounds%20and%20other%20Outdoor%20Recreational%20Facilities.aspx">hướng dẫn cho sân chơi ngoài trời</a>.</p>
 
@@ -1723,7 +1723,7 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-real-estate--vi.pdf">hướng dẫn cho các doanh nghiệp hoạt động trong ngành bất động sản</a> để tạo ra môi trường an toàn hơn cho người lao động.</p>
-<p>Xem xét hướng dẫn, chuẩn bị kế hoạch và đăng tải<a href="https://files.covid19.ca.gov/pdf/checklist-real-estate--vi.pdf"> danh mục kiểm tra dành cho ngành bất động sản</a> tại nơi làm việc của quý vị để cho khách hàng và nhân viên thấy quý vị đã giảm thiểu được nguy cơ và sẽ mở cửa kinh doanh trở lại.</p>
+<p>Xem xét hướng dẫn, lập kế hoạch và đăng tải <a href="https://files.covid19.ca.gov/pdf/checklist-real-estate--vi.pdf">danh mục kiểm tra dành cho ngành bất động sản</a> tại nơi làm việc của quý vị để cho khách hàng và nhân viên thấy quý vị đã giảm thiểu được nguy cơ và sẽ mở cửa kinh doanh trở lại.</p>
 
       </div>
     </div>
