--- a/zh-hans/industry-guidance/index.html
+++ b/zh-hans/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有助于降低风险的行业指引</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2020年12月1日, 上午9:24</p>
+            <p class="small-text">最后更新时间&nbsp;2020年12月1日, 下午4:43</p>
           
         </div>
       </div>
@@ -1395,12 +1395,12 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="campgrounds-outdoor-recreation"><span class="ca-gov-icon-tent"></span> 户外娱乐场所（包括野营地和游乐场）— 更新于10月14日</h4>
+<h4 id="campgrounds-outdoor-recreation"><span class="ca-gov-icon-tent"></span> 户外娱乐场所（包括野营地、游乐场和滑雪场）— 更新于12月1日</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>请遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--zh-hans.pdf">野营地、露营车公园和户外娱乐场所指引</a>，为员工和顾客创造更加安全的环境。 </p>
+<p>请遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--zh-hans.pdf">野营地、房车公园、滑雪场和其他户外娱乐场所指引</a>，为员工和顾客创造更加安全的环境。 </p>
 <p>查看该指引，并为工作场所制定计划，向顾客和员工表明风险已降低并重新开展业务。</p>
 <p>所有等级中的室外游乐场均可在经调整后开放。请查看<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Outdoor%20Playgrounds%20and%20other%20Outdoor%20Recreational%20Facilities.aspx">为室外游乐场制定的规定</a>，以保证每个人安全无虞及享受乐趣。</p>
 <p>所有等级中的室外滑板场均可在经调整后开放。在场者必须遵守<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Outdoor%20Playgrounds%20and%20other%20Outdoor%20Recreational%20Facilities.aspx">室外游乐场指引</a>中所述的人际距离和佩戴口罩规定。</p>
