--- a/zh-hant/industry-guidance/index.html
+++ b/zh-hant/industry-guidance/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有助於降低風險的行業指引</h1>
           
-            <p class="small-text">最近更新&nbsp;2020年12月1日, 上午9:24</p>
+            <p class="small-text">最近更新&nbsp;2020年12月1日, 下午4:43</p>
           
         </div>
       </div>
@@ -1395,12 +1395,12 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4 id="campgrounds-outdoor-recreation"><span class="ca-gov-icon-tent"></span> 戶外休閑場所（包括野營地和遊樂場）— 更新於10月14日</h4>
+<h4 id="campgrounds-outdoor-recreation"><span class="ca-gov-icon-tent"></span> 戶外休閑場所（包括野營地、遊樂場和滑雪場）— 更新於12月1日</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>請遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--zh-hant.pdf">野營地、房車公園和戶外休閑場所指引</a>，為工作人員和顧客創造更加安全的環境。 </p>
+<p>請遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-campgrounds-outdoor-recreation--zh-hant.pdf">野營地、房車公園、滑雪場和其他戶外休閑場所指引</a>，為工作人員和顧客創造更加安全的環境。 </p>
 <p>查看指引，為您的工作場所制定計劃，向顧客和員工表明風險已降低並開始營業。</p>
 <p>所有等級中的室外遊樂場均可在經調整後開放。請查看<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Outdoor%20Playgrounds%20and%20other%20Outdoor%20Recreational%20Facilities.aspx">為室外遊樂場制定的規定</a>，以保證每個人安全無虞及享受樂趣。</p>
 <p>所有等級中的室外滑板場均可在經調整後開放。訪客必須遵守<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Outdoor%20Playgrounds%20and%20other%20Outdoor%20Recreational%20Facilities.aspx">室外遊樂場指引</a>中所述的人際距離規定和佩戴口罩規定。</p>
